--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <!--Go to https://console.firebase.google.com-->
     <!--Sign in and add a project "fireMessage"-->
     <!--PASTE SNIPPET HERE-->
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDGUUCmObQsAaAY77OQQ0sJEfZ-ceoA5AI",
+            authDomain: "firemessage-c7fab.firebaseapp.com",
+            databaseURL: "https://firemessage-c7fab.firebaseio.com",
+            projectId: "firemessage-c7fab",
+            storageBucket: "",
+            messagingSenderId: "39410633375"
+        };
+        firebase.initializeApp(config);
 
+    </script>
 
 
 
